# advent_of_code

./: README.md  new.sh
day01/: README.md  puzzle2.py
day01/python/: shared.py
day01/rust/src/: main.rs
day02/: README.md  puzzle1.py  puzzle2.py
day02/python/: puzzle1.py  puzzle2.py
day03/: README.md  puzzle1.py  puzzle2.py
day03/python/: puzzle1.py  puzzle2.py
day04/: README.md
day04/python/: puzzle1.py  puzzle2.py  pyproject.toml  shared.py
day05/: README.md
day05/python/: puzzle1.py  puzzle2.py  pyproject.toml  shared.py
day06/: README.md
day06/python/: puzzle1.py  puzzle2.py
day07/: README.md
day07/python/: puzzle1.py  puzzle2.py
day_1/: README.md  puzzle_1.py  shared.py
day_2/: README.md
